fix: resolve SonarQube warnings (unused variable, duplicate strings, CompoundIndexes, unused imports)